--- a/index.html
+++ b/index.html
@@ -1,24 +1,265 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Portfólio de Pedro Moraes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
+
+<!-------------------------------------BARRA SUPERIOR---------------------------------------->
     <header>
-        <h1>Bem-vindo ao meu portfólio!</h1>
+
+        <nav class="navbar navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="https://www.linkedin.com/in/pedro-henrique-de-moraes/" target="_blank"
+                    rel="noopener"><img src="./images/Captura de tela de 2025-02-11 23-20-42-fotor-20250212173413.png"
+                        alt="foto de perfil Pedro Henrique de Moraes"><span class="ms-3">Portfólio de Pedro
+                        Moraes</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Links de Acesso</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex mt-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+<!-------------------------------------CARROSSEL DE IMAGENS---------------------------------------->
+
+        <main>
+
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://images.unsplash.com/photo-1554118811-1e0d58224f24?q=80&w=1447&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="d-block w-100"
+                            alt="imagem de uma cafeteria rústica com plantas, um balcão ao fundo e uma parede com diversas bebidas expostas.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Projeto: Coffee Time</h5>
+                            <p>Um projeto focado em responsividade e botões funcionais. Um site de uma cafeteria gourmet
+                                desenvolvido com HTML, CSS e aplicando funcionalidades do Bootstrap.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.unsplash.com/photo-1614680376739-414d95ff43df?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="d-block w-100"
+                            alt="imagem de um cubo escuro com o logo do Discord mais claro ao centro e um fundo roxo.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Projeto: Página do Discord</h5>
+                            <p>Focado para Desktop, a página do Discord foi recriada do zero com HTML e CSS.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.unsplash.com/photo-1616469829526-7057a1427626?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="d-block w-100" alt="imagem da página de reprodução de vídeos do Youtube.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Projeto: Recriação de uma página de reprodução do Youtube para desktop</h5>
+                            <p>Esta página recria a visão que você tem ao assistir um vídeo no Youtube em um computador.
+                                Projeto focado no uso de Flexbox e com botões funcionais, somente não endereçados.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.unsplash.com/photo-1567443024551-f3e3cc2be870?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="d-block w-100" alt="imagem da grade de sugestão de vídeos do Youtube.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Projeto: Listagem de vídeos do Youtube com Grid Layout</h5>
+                            <p>Página de recomendação de vídeos do Youtube com HTML e CSS. Todos os botões ativos,
+                                somente
+                                não relacionados a endereços externos.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://images.unsplash.com/photo-1714623287328-4e7ed0bed7b8?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="d-block w-100"
+                            alt="imagem de um smartphone com o aplicativo HBO Max aberto e um fundo desfocado de uma tela de seleção de conteúdo.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Projeto em Desenvolvimento: Site da HBO Max com animações e transições</h5>
+                            <p>Página de recomendação de vídeos do Youtube com HTML e CSS.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
     </header>
-    <main>
-        <section>
-            <h2>Meus Projetos</h2>
-            <ul>
-                <li><a href="https://me-pedromoraes.github.io/CoffeeTime">CoffeeTime</a></li>
-                <li><a href="https://me-pedromoraes.github.io/PaginaDiscord">Página Discord</a></li>
-                <li><a href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html">Página YouTube</a></li>
-            </ul>
-        </section>
+
+<!-------------------------------------FRASE---------------------------------------->
+
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <h3 class="fw-lighter fst-italic m-5">O design atrai, a experiência encanta, o código faz acontecer.</h3>
+        </blockquote>
+        </figcaption>
+    </figure>
+
+<!-------------------------------------FUNDO COM ANIMAÇÃO---------------------------------------->
+
+
+
+    <span class="fundo-animado">
+        <div class="box"></div>
+    </span>
+
+
+
+<!-------------------------------------INFORMAÇÕES---------------------------------------->
+
+<section class="botoes-info">
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSobreMim" aria-expanded="false" aria-controls="collapseSobreMim">
+        Sobre Mim
+    </button>
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFormacao" aria-expanded="false" aria-controls="collapseFormacao">
+        Formação
+    </button>
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTasks" aria-expanded="false" aria-controls="collapseTasks">
+        Tasks
+    </button>
+</section>
+
+<div>
+    <div class="collapse collapse-horizontal" id="collapseSobreMim">
+        <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!</div>
+    </div>
+
+    <div class="collapse collapse-horizontal" id="collapseFormacao">
+        <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!</div>
+    </div>
+
+    <div class="collapse collapse-horizontal" id="collapseTasks">
+        <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!</div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+<!-------------------------------------CARDS---------------------------------------->
+
+    <section class="projetos">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card-projetos">
+                <a href="https://me-pedromoraes.github.io/CoffeeTime" target="_blank" rel="noopener"><img src="https://images.unsplash.com/photo-1534422646206-3cf5a7d4a1b1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="imagem de um letreiro de café com lâmpadas rústicas"></a>
+                <div class="card-body m-5">
+                  <h5 class="card-title"><a href="https://me-pedromoraes.github.io/CoffeeTime" target="_blank" rel="noopener">Projeto: Coffe Time</h5></a>
+                  <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-projetos">
+                <a href="https://me-pedromoraes.github.io/PaginaDiscord" target="_blank" rel="noopener"><img src="https://images.unsplash.com/photo-1679057001914-59ab4131dfff?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="logo do discord em perspectiva com o fundo roxo"></a>
+                <div class="card-body m-5">
+                  <h5 class="card-title"><a href="https://me-pedromoraes.github.io/PaginaDiscord" target="_blank" rel="noopener">Projeto: Página do Discord</h5></a>
+                  <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-projetos">
+                <a href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html" target="_blank"
+                    rel="noopener"><img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="logo do youtube com um fundo azul e a luz vermelha refletida no chão"></a>
+                <div class="card-body m-5">
+                  <h5 class="card-title"><a href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html" target="_blank"
+                    rel="noopener">Projeto: Player do Youtube</h5></a>
+                  <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-projetos">
+                <a href="https://me-pedromoraes.github.io/listagem-youtube/index.html"target="_blank"
+                    rel="noopener"><img src="https://images.unsplash.com/photo-1637806631554-bcfe2c618058?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="uma pilha de pequenos players do youtube remetendo a uma lista de sugestões"></a>
+                <div class="card-body m-5">
+                  <h5 class="card-title"><a href="https://me-pedromoraes.github.io/listagem-youtube/index.html"target="_blank"
+                    rel="noopener">Projeto: Lista Youtube</h5></a>
+                  <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
+
+
+
     </main>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
