alterações no portfólio

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <!-------------------------------------CARROSSEL DE IMAGENS---------------------------------------->
 
-        <main>
+        <main class="custom-container">
 
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
