--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://www.linkedin.com/in/pedro-henrique-de-moraes/" target="_blank"
                     rel="noopener"><img src="./images/Captura de tela de 2025-02-11 23-20-42-fotor-20250212173413.png"
-                        alt="foto de perfil Pedro Henrique de Moraes"><span class="ms-3">Portfólio de Pedro
+                        alt="foto de perfil Pedro Henrique de Moraes"><span class="ms-2">Portfólio: Pedro
                         Moraes</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
