--- a/index.html
+++ b/index.html
@@ -178,59 +178,48 @@
                 Formação
             </button>
 
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTasks"
-                aria-expanded="false" aria-controls="collapseTasks">
-                Tasks
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills"
+                aria-expanded="false" aria-controls="collapseSkills">
+                Skills
             </button>
         </section>
 
         <div>
             <div class="collapse collapse-horizontal" id="collapseSobreMim">
-                <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit.
-                    Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias
-                    expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor
-                    sit,
-                    amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum
-                    sint.
-                    Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium
-                    sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto
-                    veniam
-                    accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore
-                    cumque
-                    ullam accusantium ab, praesentium sapiente fugiat!</div>
+                <div class="card card-body" style="width: 100%;">Me chamo Pedro Henrique de Moraes e sou de São José dos
+                    Campos/ SP. Sempre fui uma pessoa independente, tendo que correr atrás dos meus objetivos desde cedo.
+                    Aos 18 anos, comecei a morar sozinho, pagando aluguel e encarando desafios que me tornaram mais
+                    determinado.
+
+                    Sou apaixonado por tecnologia, inovações, mercado mobile, robótica e inteligência artificial. Meu
+                    interesse pelo desenvolvimento front-end surgiu quando comecei a criar pequenos projetos na
+                    faculdade, e desde então venho aprimorando minhas habilidades. Tenho um aprendizado rápido e estou
+                    sempre em busca de novas oportunidades para crescer e evoluir na área.</div>
             </div>
 
             <div class="collapse collapse-horizontal" id="collapseFormacao">
-                <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit.
-                    Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias
-                    expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor
-                    sit,
-                    amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum
-                    sint.
-                    Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium
-                    sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto
-                    veniam
-                    accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore
-                    cumque
-                    ullam accusantium ab, praesentium sapiente fugiat!</div>
+                <div class="card card-body" style="width: 100%;">Sou graduado em Análise e Desenvolvimento de Sistemas
+                    pelo
+                    Centro Universitário UFBRA e atualmente matriculado na UNIFESP para realização da minha Pós
+                    Graduação (mestrado) em Ciência da Computação. Desenvolvo soluções web com
+                    expertise em linguagens como Python, JavaScript e TypeScript,
+                    além de tecnologias front-end como HTML5, CSS3 e React.js.
+                    Com forte interesse em desenvolvimento mobile e inteligência
+                    artificial, especialmente em IA generativa, estou sempre em
+                    busca de novos desafios e realizando novos cursos para aprender a criar soluções inovadoras e
+                    impactantes.</div>
             </div>
 
-            <div class="collapse collapse-horizontal" id="collapseTasks">
-                <div class="card card-body" style="width: 100%;">Lorem ipsum dolor sit, amet consectetur adipisicing
-                    elit.
-                    Voluptatum architecto veniam accusantium maxime libero earum sint. Eligendi accusamus, placeat alias
-                    expedita deserunt dolore cumque ullam accusantium ab, praesentium sapiente fugiat!Lorem ipsum dolor
-                    sit,
-                    amet consectetur adipisicing elit. Voluptatum architecto veniam accusantium maxime libero earum
-                    sint.
-                    Eligendi accusamus, placeat alias expedita deserunt dolore cumque ullam accusantium ab, praesentium
-                    sapiente fugiat!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum architecto
-                    veniam
-                    accusantium maxime libero earum sint. Eligendi accusamus, placeat alias expedita deserunt dolore
-                    cumque
-                    ullam accusantium ab, praesentium sapiente fugiat!</div>
+            <div class="collapse collapse-horizontal" id="collapseSkills">
+                <div class="card card-body" style="width: 100%;">Tenho experiência sólida em desenvolvimento front-end,
+                    trabalhando com JavaScript, TypeScript, HTML5, CSS3, Bootstrap e React para criar interfaces
+                    modernas e responsivas. Além disso, possuo conhecimento em Python, Node.js e Git, o que amplia
+                    minhas possibilidades no desenvolvimento web e automação.
+
+                    Sou proativo, com experiência em gestão de processos e sempre busco aprimorar minhas habilidades.
+                    Tenho familiaridade com ferramentas como Visual Studio e SAP e um aprendizado rápido, o que me
+                    permite adaptar-me facilmente a novas tecnologias. Também possuo conhecimento intermediário em
+                    inglês e espanhol, facilitando entendimento de projetos em outros idiomas.</div>
             </div>
         </div>
 
@@ -253,9 +242,7 @@
                         <div class="card-body m-5">
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/CoffeeTime" target="_blank"
                                     rel="noopener">Projeto: Coffe Time</h5></a>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural
-                                lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text mt-4">Um projeto responsivo e focado em passar uma estética agradável. Utilizado HTML, CSS e Botstrap, o site Coffee Time é inspirado em cafeterias gourmet que vendem uma experiência gastronômica que precisa ser demonstrada através de sua página com um cardápio interativo, ilustrado e organizado.</p>
                         </div>
                     </div>
                 </div>
@@ -267,9 +254,7 @@
                         <div class="card-body m-5">
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/PaginaDiscord"
                                     target="_blank" rel="noopener">Projeto: Página do Discord</h5></a>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural
-                                lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text mt-4">Este projeto focado no uso em Desktop, é uma recriação da página do Discord com estruturação através de Flexbox para posicionamento dos itens em CSS. Todo o HTML também foi codificado do zero e o escopo montado no Figma.</p>
                         </div>
                     </div>
                 </div>
@@ -284,9 +269,7 @@
                             <h5 class="card-title"><a
                                     href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html"
                                     target="_blank" rel="noopener">Projeto: Player do Youtube</h5></a>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural
-                                lead-in
-                                to additional content.</p>
+                            <p class="card-text mt-4">A intenção deste projeto é trazer a familiaridade ao abrir um player do Youtube pelo computador. a organização da página, o player funcional adicionado atravez de iframe, e todos os botões da página ativos (somente não endereçados) para se sentir em uma página verdadeira do YouTube.</p>
                         </div>
                     </div>
                 </div>
@@ -301,9 +284,7 @@
                             <h5 class="card-title"><a
                                     href="https://me-pedromoraes.github.io/listagem-youtube/index.html" target="_blank"
                                     rel="noopener">Projeto: Lista Youtube</h5></a>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural
-                                lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text mt-4">Assim como o projeto anterior, a intenção é trazer a familiaridade de navegar pelas páginas do YouTube, mas aqui ao ivés do player temos a grade de sugestões de vídeos. Os botões assim como em todos os projetos são funcionais, somente não endereçados, e aqui a página foi estruturada com Grid Layout.</p>
                         </div>
                     </div>
                 </div>
