--- a/index.html
+++ b/index.html
@@ -36,30 +36,33 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page"
+                                    href="https://www.linkedin.com/in/pedro-henrique-de-moraes/" target="_blank"
+                                    rel="noopener">LinkedIn</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link"
+                                    href="https://acrobat.adobe.com/id/urn:aaid:sc:US:54bdabb5-76e3-4b7e-9815-61a7b608ed40"
+                                    target="_blank" rel="noopener">Meu currículo</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Dropdown
+                                    Outros contatos
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="https://wa.me/5512996632817" target="_blank"
+                                            rel="noopener">WhatsApp</a></li>
+                                    <li><a class="dropdown-item" href="mailto:pedrohmsjc@gmail.com" target="_blank"
+                                            rel="noopener">Meu E-mail</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/me-pedromoraes"
+                                            target="_blank" rel="noopener">Meu Github</a></li>
                                 </ul>
                             </li>
                         </ul>
-                        <form class="d-flex mt-3" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-success" type="submit">Search</button>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -167,18 +170,18 @@
 
         <!-------------------------------------INFORMAÇÕES---------------------------------------->
 
-        <section class="botoes-info">
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSobreMim"
+        <section class="botoes-info mb-6">
+            <button class="btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSobreMim"
                 aria-expanded="false" aria-controls="collapseSobreMim">
                 Sobre Mim
             </button>
 
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFormacao"
+            <button class="btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFormacao"
                 aria-expanded="false" aria-controls="collapseFormacao">
                 Formação
             </button>
 
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills"
+            <button class="btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills"
                 aria-expanded="false" aria-controls="collapseSkills">
                 Skills
             </button>
@@ -187,7 +190,8 @@
         <div>
             <div class="collapse collapse-horizontal" id="collapseSobreMim">
                 <div class="card card-body" style="width: 100%;">Me chamo Pedro Henrique de Moraes e sou de São José dos
-                    Campos/ SP. Sempre fui uma pessoa independente, tendo que correr atrás dos meus objetivos desde cedo.
+                    Campos/ SP. Sempre fui uma pessoa independente, tendo que correr atrás dos meus objetivos desde
+                    cedo.
                     Aos 18 anos, comecei a morar sozinho, pagando aluguel e encarando desafios que me tornaram mais
                     determinado.
 
@@ -242,7 +246,10 @@
                         <div class="card-body m-5">
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/CoffeeTime" target="_blank"
                                     rel="noopener">Projeto: Coffe Time</h5></a>
-                            <p class="card-text mt-4">Um projeto responsivo e focado em passar uma estética agradável. Utilizado HTML, CSS e Botstrap, o site Coffee Time é inspirado em cafeterias gourmet que vendem uma experiência gastronômica que precisa ser demonstrada através de sua página com um cardápio interativo, ilustrado e organizado.</p>
+                            <p class="card-text mt-4">Um projeto responsivo e focado em passar uma estética agradável.
+                                Utilizado HTML, CSS e Botstrap, o site Coffee Time é inspirado em cafeterias gourmet que
+                                vendem uma experiência gastronômica que precisa ser demonstrada através de sua página
+                                com um cardápio interativo, ilustrado e organizado.</p>
                         </div>
                     </div>
                 </div>
@@ -254,7 +261,9 @@
                         <div class="card-body m-5">
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/PaginaDiscord"
                                     target="_blank" rel="noopener">Projeto: Página do Discord</h5></a>
-                            <p class="card-text mt-4">Este projeto focado no uso em Desktop, é uma recriação da página do Discord com estruturação através de Flexbox para posicionamento dos itens em CSS. Todo o HTML também foi codificado do zero e o escopo montado no Figma.</p>
+                            <p class="card-text mt-4">Este projeto focado no uso em Desktop, é uma recriação da página
+                                do Discord com estruturação através de Flexbox para posicionamento dos itens em CSS.
+                                Todo o HTML também foi codificado do zero e o escopo montado no Figma.</p>
                         </div>
                     </div>
                 </div>
@@ -269,7 +278,10 @@
                             <h5 class="card-title"><a
                                     href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html"
                                     target="_blank" rel="noopener">Projeto: Player do Youtube</h5></a>
-                            <p class="card-text mt-4">A intenção deste projeto é trazer a familiaridade ao abrir um player do Youtube pelo computador. a organização da página, o player funcional adicionado atravez de iframe, e todos os botões da página ativos (somente não endereçados) para se sentir em uma página verdadeira do YouTube.</p>
+                            <p class="card-text mt-4">A intenção deste projeto é trazer a familiaridade ao abrir um
+                                player do Youtube pelo computador. a organização da página, o player funcional
+                                adicionado atravez de iframe, e todos os botões da página ativos (somente não
+                                endereçados) para se sentir em uma página verdadeira do YouTube.</p>
                         </div>
                     </div>
                 </div>
@@ -284,7 +296,10 @@
                             <h5 class="card-title"><a
                                     href="https://me-pedromoraes.github.io/listagem-youtube/index.html" target="_blank"
                                     rel="noopener">Projeto: Lista Youtube</h5></a>
-                            <p class="card-text mt-4">Assim como o projeto anterior, a intenção é trazer a familiaridade de navegar pelas páginas do YouTube, mas aqui ao ivés do player temos a grade de sugestões de vídeos. Os botões assim como em todos os projetos são funcionais, somente não endereçados, e aqui a página foi estruturada com Grid Layout.</p>
+                            <p class="card-text mt-4">Assim como o projeto anterior, a intenção é trazer a familiaridade
+                                de navegar pelas páginas do YouTube, mas aqui ao ivés do player temos a grade de
+                                sugestões de vídeos. Os botões assim como em todos os projetos são funcionais, somente
+                                não endereçados, e aqui a página foi estruturada com Grid Layout.</p>
                         </div>
                     </div>
                 </div>
