ajustes na barra superior

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                             <li class="nav-item">
                                 <a class="nav-link"
                                     href="https://acrobat.adobe.com/id/urn:aaid:sc:US:54bdabb5-76e3-4b7e-9815-61a7b608ed40"
-                                    target="_blank" rel="noopener">Meu currículo</a>
+                                    target="_blank" rel="noopener">Currículo</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Outros contatos
+                                    Contato
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="https://wa.me/5512996632817" target="_blank"
@@ -59,7 +59,7 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item" href="https://github.com/me-pedromoraes"
-                                            target="_blank" rel="noopener">Meu Github</a></li>
+                                            target="_blank" rel="noopener">Github</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -247,9 +247,7 @@
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/CoffeeTime" target="_blank"
                                     rel="noopener">Projeto: Coffe Time</h5></a>
                             <p class="card-text mt-4">Um projeto responsivo e focado em passar uma estética agradável.
-                                Utilizado HTML, CSS e Botstrap, o site Coffee Time é inspirado em cafeterias gourmet que
-                                vendem uma experiência gastronômica que precisa ser demonstrada através de sua página
-                                com um cardápio interativo, ilustrado e organizado.</p>
+                                Utilizado HTML, CSS e Botstrap, o site Coffee Time é inspirado em cafeterias gourmet.</p>
                         </div>
                     </div>
                 </div>
@@ -262,8 +260,7 @@
                             <h5 class="card-title"><a href="https://me-pedromoraes.github.io/PaginaDiscord"
                                     target="_blank" rel="noopener">Projeto: Página do Discord</h5></a>
                             <p class="card-text mt-4">Este projeto focado no uso em Desktop, é uma recriação da página
-                                do Discord com estruturação através de Flexbox para posicionamento dos itens em CSS.
-                                Todo o HTML também foi codificado do zero e o escopo montado no Figma.</p>
+                                do Discord com estruturação através de Flexbox para posicionamento dos itens em CSS e Figma.</p>
                         </div>
                     </div>
                 </div>
@@ -279,9 +276,8 @@
                                     href="https://me-pedromoraes.github.io/PaginaYoutube/Pagina%20Youtube/index.html"
                                     target="_blank" rel="noopener">Projeto: Player do Youtube</h5></a>
                             <p class="card-text mt-4">A intenção deste projeto é trazer a familiaridade ao abrir um
-                                player do Youtube pelo computador. a organização da página, o player funcional
-                                adicionado atravez de iframe, e todos os botões da página ativos (somente não
-                                endereçados) para se sentir em uma página verdadeira do YouTube.</p>
+                                player do Youtube pelo computador. Os botões e o player são funcionais e foi
+                                adicionado atravez de iframe.</p>
                         </div>
                     </div>
                 </div>
@@ -297,9 +293,8 @@
                                     href="https://me-pedromoraes.github.io/listagem-youtube/index.html" target="_blank"
                                     rel="noopener">Projeto: Lista Youtube</h5></a>
                             <p class="card-text mt-4">Assim como o projeto anterior, a intenção é trazer a familiaridade
-                                de navegar pelas páginas do YouTube, mas aqui ao ivés do player temos a grade de
-                                sugestões de vídeos. Os botões assim como em todos os projetos são funcionais, somente
-                                não endereçados, e aqui a página foi estruturada com Grid Layout.</p>
+                                de navegar pelas páginas do YouTube com botões funcionais e estruturando a página com
+                                Grid Layout.</p>
                         </div>
                     </div>
                 </div>
