--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://www.linkedin.com/in/pedro-henrique-de-moraes/" target="_blank"
+                <a class="navbar-brand" href="https://www.linkedin.com/in/me-pedromoraes/" target="_blank"
                     rel="noopener"><img src="./images/Captura de tela de 2025-02-11 23-20-42-fotor-20250212173413.png"
                         alt="foto de perfil Pedro Henrique de Moraes"><span class="ms-1">Portfólio Pedro
                         Moraes</span></a>
@@ -37,7 +37,7 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="https://www.linkedin.com/in/pedro-henrique-de-moraes/" target="_blank"
+                                    href="https://www.linkedin.com/in/me-pedromoraes/" target="_blank"
                                     rel="noopener">LinkedIn</a>
                             </li>
                             <li class="nav-item">
